[metadata]
description-file = README.md

# Not everything has to be documented, but everything that is documented should
# be documented well. Furthermore, a blank line after a doc string should
# always be okay and spaces around every arithmetic operator can make stuff
# less reabable.
[flake8]
ignore = D1,D202,E226
