[metadata]
description-file = README.md

# Not everything has to be documented, but everything that is documented should
# be documented well. Furthermore, a blank line after a doc string should
# always be okay and spaces around every arithmetic operator can make stuff
# less reabable. Raw strings are not required since linebreaks have to be
# entered for napoleon so it can handle long types.
[flake8]
ignore = D1,D202,D203,E226,D212,D403,D404
